modal in nueva not centered on mobile, fixing centering

--- a/nueva.css
+++ b/nueva.css
@@ -137,18 +137,15 @@ font-size: 1.3rem;
 
 }
 
-  /* @media (max-width: 500px) {
+  @media (max-width: 500px) {
 
-  #nueva-modal{
-    display:none;
-  }
 
 
    .images{
      background-size: contain;
    }
    .titleContainer{
-     display:none;
+     text-align: center;
    }
 
-  } */
+  }
